--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "next": "^12.1.5",
+    "prismjs": "^1.28.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-syntax-highlighter": "^15.5.0"
   }
 }
