--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-react-css-modules": "^5.2.6",
     "next": "^12.1.5",
     "prismjs": "^1.28.0",
     "react": "^18.1.0",
