--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "babel-plugin-react-css-modules": "^5.2.6",
-    "next": "^12.1.5",
+    "next": "^12.1.6",
     "prismjs": "^1.28.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-input-slider": "^6.0.1",
     "react-syntax-highlighter": "^15.5.0"
   }
 }
