--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.2",
     "babel-plugin-react-css-modules": "^5.2.6",
     "next": "^12.1.6",
+    "nextjs": "^0.0.3",
     "prismjs": "^1.28.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
