--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
     "babel-plugin-react-css-modules": "^5.2.6",
     "next": "^12.1.6",
@@ -22,6 +23,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-input-slider": "^6.0.1",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "styled-components": "^5.3.5"
   }
 }
