--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prismjs": "^1.28.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-highlight-words": "^0.18.0",
     "react-input-slider": "^6.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "styled-components": "^5.3.5"
