--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@mui/material": "^5.8.2",
     "babel-plugin-react-css-modules": "^5.2.6",
     "classnames": "^2.3.1",
+    "fs": "^0.0.1-security",
     "next": "^12.1.6",
     "nextjs": "^0.0.3",
+    "node": "^18.5.0",
     "prismjs": "^1.28.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
