--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
-    "babel-plugin-react-css-modules": "^5.2.6",
     "classnames": "^2.3.1",
     "fs": "^0.0.1-security",
     "next": "^12.1.6",
@@ -25,9 +24,7 @@
     "prismjs": "^1.28.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-highlight-words": "^0.18.0",
     "react-input-slider": "^6.0.1",
-    "react-syntax-highlighter": "^15.5.0",
-    "styled-components": "^5.3.5"
+    "react-syntax-highlighter": "^15.5.0"
   }
 }
