--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.3.1",
     "fs": "^0.0.1-security",
     "next": "^12.1.6",
+    "next-themes": "^0.2.0",
     "nextjs": "^0.0.3",
     "node": "^18.5.0",
     "prismjs": "^1.28.0",
