--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
     "classnames": "^2.3.1",
+    "disqus-react": "^1.1.3",
     "fs": "^0.0.1-security",
     "next": "^12.1.6",
     "next-themes": "^0.2.0",
