--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
     "classnames": "^2.3.1",
-    "disqus-react": "^1.1.3",
     "fs": "^0.0.1-security",
     "next": "^12.1.6",
     "next-themes": "^0.2.0",
@@ -29,5 +28,9 @@
     "react-dom": "^18.1.0",
     "react-input-slider": "^6.0.1",
     "react-syntax-highlighter": "^15.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.20.0",
+    "eslint-plugin-react": "^7.30.1"
   }
 }
