--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,9 @@
 [[plugins]]
 package = "@netlify/plugin-sitemap"
+
+  [plugins.inputs]
+  buildDir = "public"
+  exclude = [
+    './build-dir/path-to/_app.js',
+    './build-dir/path-to/_documents.js'
+  ]
