--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
 package = "@netlify/plugin-sitemap"
 
   [plugins.inputs]
-  buildDir = "public"
+  buildDir = "."
   exclude = [
     './build-dir/path-to/_app.js',
     './build-dir/path-to/_documents.js'
