--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,6 @@
 package = "@netlify/plugin-sitemap"
 
 exclude = [
-      '**/server/pages/en/500',
-      '**/server/pages/en/404',
+      './server/pages/en/500',
+      './server/pages/en/404',
   ]
