--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prismjs": "^1.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-slider": "^2.0.6",
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
